1688Admin : finished merchant

--- a/src/apps/1688Admin/components/system-list/index.pug
+++ b/src/apps/1688Admin/components/system-list/index.pug
@@ -34,7 +34,7 @@
             a.sl-btn.touch-active(href='index-party.html#party.html' target="_blank")
                 .sl-btn-icon
                     i.fa.fa-star-o
-                .sl-btn-title 党政管理
+                .sl-btn-title 党团管理
         .col-xs-4
             a.sl-btn.touch-active(href='index-platform.html#platform.html' target="_blank")
                 .sl-btn-icon
