--- a/src/apps/1688Admin/components/todo/index.styl
+++ b/src/apps/1688Admin/components/todo/index.styl
@@ -141,3 +141,26 @@ TODO_PADDING = 0.12rem
                 border-bottom none
             &:last-child
                 border-bottom none
+
+.todo-tabs
+    padding-top 0.04rem
+    border-left 1px solid TODO_BORDER_COLOR
+    border-right 1px solid TODO_BORDER_COLOR
+    > li
+        > a
+            margin-left 0.04rem
+            margin-right 0
+            border-radius 0
+            padding 0.06rem 0.12rem
+
+.todo-empty
+    padding 0.5rem 0.2rem
+    font-size 0.24rem
+    color GRAY_D6
+    text-align center
+    border 1px solid TODO_BORDER_COLOR
+    border-top none
+    i
+        font-size 1rem
+        color GRAY_F0
+    
