--- a/src/apps/1688Admin/webapp/index-oa.pug
+++ b/src/apps/1688Admin/webapp/index-oa.pug
@@ -280,6 +280,12 @@ block js
                             icon_class : "fa fa-money",
                             selected : false,
                             btn_props : "data-toggle='iframelinker' data-link='oa-workflow-payment.html'"
+                        },
+                        {
+                            title : "用印申请",
+                            icon_class : "fa fa-square",
+                            selected : false,
+                            btn_props : "data-toggle='iframelinker' data-link='oa-workflow-stamp.html'"
                         }
                     ]
                 }
