--- a/src/apps/1688Admin/webapp/merchant-orginfo-cat.pug
+++ b/src/apps/1688Admin/webapp/merchant-orginfo-cat.pug
@@ -18,7 +18,7 @@ block content
                         |&nbsp;删除类型
                 table#table_type
             .col-xs-12
-                .page-title.mt-space 企业行业
+                .page-title 企业行业
             .col-xs-12
                 .toolbar#toolbar_ind
                     .btn.btn-theme#toolbtn_new_ind
@@ -32,7 +32,7 @@ block content
                         |&nbsp;删除类型
                 table#table_ind
             .col-xs-12
-                .page-title.mt-space 企业状态
+                .page-title 企业状态
             .col-xs-12
                 .toolbar#toolbar_state
                     .btn.btn-theme#toolbtn_new_state
