--- a/src/apps/1688Admin/webapp/merchant-orginfo-new-nosign.pug
+++ b/src/apps/1688Admin/webapp/merchant-orginfo-new-nosign.pug
@@ -42,12 +42,12 @@ block content
                         .form-group.cool-form-group.form-group-sm
                             .cool-form-label.text-right.control-label 注册地：
                             input.form-control(type="text")
-                    .col-sm-12.col-md-12
+                    .col-xs-12
                         .form-group.cool-form-group.form-group-sm
                             .cool-form-label.text-right.control-label 备注：
                             textarea.form-control.textarea( style="resize: none;" rows = 3 )
                     .col-sm-12.col-md-12
-                        .btn.btn-large.btn-theme
+                        .btn.btn-large.btn-theme#btn_submit
                             i.fa.fa-upload
                             |&nbsp;提交保存
                     
@@ -70,15 +70,12 @@ block js
     script(type='text/javascript').
         $(document).ready(function(){
             
-            var $settleTime = $('##settle_time');
-            
-            //起始日期
-            $$settleTime.datetimepicker({
-                viewMode: 'days',
-                format: 'YYYY-MM-DD',
-                allowInputToggle: true
+            $("#btn_submit").click(function(){
+                
+                //提交数据成功后，返回上级页面
+                window.location.href='merchant-orginfo.html';
+                
             });
-            
             
         });
 
