--- a/src/apps/1688Admin/webapp/stylus/block-title.styl
+++ b/src/apps/1688Admin/webapp/stylus/block-title.styl
@@ -2,6 +2,7 @@ BLOCK_TITLE_HEIGHT = 0.32rem
 BLOCK_TITLE_BGC = GRAY_F5
 BLOCK_TITLE_BGC_2 = THEME_COLOR
 BLOCK_TITLE_BOTTOM = 0.1rem
+BLOCK_TITLE_BOTTOM_THIN = 0.04rem
 
 BLOCK_TITLE_HEAD_BGC = THEME_COLOR
 BLOCK_TITLE_HEAD_BGC_2 = THEME_COLOR_2
@@ -87,6 +88,8 @@ BLOCK_TITLE_SHOULDER_BGC_HOVER_2 = darken(THEME_COLOR,10%)
                 color BLOCK_TITLE_SHOULDER_FCOLOR_HOVER_2
     &.no-bottom
         margin-bottom 0
+    &.thin-bottom
+        margin-bottom BLOCK_TITLE_BOTTOM_THIN
         
         
     
