--- a/src/apps/1688Admin/webapp/stylus/bs-table-overwrite.styl
+++ b/src/apps/1688Admin/webapp/stylus/bs-table-overwrite.styl
@@ -23,3 +23,33 @@
     font-size 0
     .btn
         margin-right 0.04rem
+
+.block-table-container
+    .bootstrap-table
+        position relative
+        .fixed-table-toolbar
+            position absolute
+            top -0.27rem
+            right 0.04rem
+            .search
+                .form-control
+                    border-radius 0
+                    height 0.24rem
+                    font-size 0.12rem
+                    padding 0.02rem 0.04rem
+    &.text-sm
+        .bootstrap-table
+            font-size 12px
+
+.funnel
+    position absolute
+    z-index 1
+    left 0
+    top 0
+    right 0
+    bottom 0
+    img
+        width 100%
+        height 100%
+        float left
+
