--- a/src/apps/1688Admin/webapp/stylus/index.styl
+++ b/src/apps/1688Admin/webapp/stylus/index.styl
@@ -212,6 +212,7 @@ for i in (1..10)
 @require '../../components/news-list/index'
 @require '../../components/system-list/index'
 @require '../../components/todo/index'
+@require '../../components/merchant-overview/index'
 @require '../../components/footer/index'
 
 
