--- a/src/apps/1688Admin/components/todo/index.pug
+++ b/src/apps/1688Admin/components/todo/index.pug
@@ -1,79 +1,198 @@
 .row
     .col-xs-12
-        ul.todo
-            li.todo-alert
-                .todo-icon
-                    i.fa.fa-exclamation
-                .todo-title
-                    |紧急：培训审批
-                    .todo-time 09.07
-                .todo-text 办公协同-人力资源-培训-总经理审批：2017年中团队执行力培训活动待审批
-                .pull-right
-                    a.btn.btn-sm.btn-capsule.todo-btn(href='#')
-                        |立即执行&nbsp;
-                        i.fa.fa-angle-right
-            li.todo-new
-                .todo-icon
-                    i.fa.fa-plus
-                .todo-title
-                    |新增：路演项目审核
-                    .todo-time 09.15
-                .todo-text 创业孵化-创业路演-创业路演审核：帕克智能停车创业项目路演
-                .pull-right
-                    a.btn.btn-sm.btn-capsule.todo-btn(href='#')
-                        |开始处理&nbsp;
-                        i.fa.fa-angle-right
-            li.todo-current
-                .todo-icon
-                    i.fa.fa-arrow-right
-                .todo-title
-                    |进行中：工会活动编辑
-                    .todo-time 09.07
-                .todo-text 党政管理-工会活动-工会活动编辑：关于2017中秋节晚会筹办组委会成员名单及任务分配的通知
-                .pull-right
-                    a.btn.btn-sm.btn-capsule.todo-btn(href='#')
-                        |继续处理&nbsp;
-                        i.fa.fa-angle-right
-            li.todo-finished
-                .todo-icon
-                    i.fa.fa-check
-                .todo-title
-                    |已完成：采购申请审批通过
-                    .todo-time 09.07
-                .todo-text 物业管理-仓库-采购申请：单号：84001251，产品名称：45W节能灯，采购数量：200
-                .pull-right
-                    a.btn.btn-sm.btn-capsule.todo-btn(href='#')
-                        |确认完成
-            li.todo-new
-                .todo-icon
-                    i.fa.fa-plus
-                .todo-title
-                    |新增：路演项目审核
-                    .todo-time 09.15
-                .todo-text 创业孵化-创业路演-创业路演审核：帕克智能停车创业项目路演
-                .pull-right
-                    a.btn.btn-sm.btn-capsule.todo-btn(href='#')
-                        |开始处理&nbsp;
-                        i.fa.fa-angle-right
-            li.todo-current
-                .todo-icon
-                    i.fa.fa-arrow-right
-                .todo-title
-                    |进行中：工会活动编辑
-                    .todo-time 09.07
-                .todo-text 党政管理-工会活动-工会活动编辑：关于2017中秋节晚会筹办组委会成员名单及任务分配的通知
-                .pull-right
-                    a.btn.btn-sm.btn-capsule.todo-btn(href='#')
-                        |继续处理&nbsp;
-                        i.fa.fa-angle-right
-            li.todo-finished
-                .todo-icon
-                    i.fa.fa-check
-                .todo-title
-                    |已完成：采购申请审批通过
-                    .todo-time 09.07
-                .todo-text 物业管理-仓库-采购申请：单号：84001251，产品名称：45W节能灯，采购数量：200
-                .pull-right
-                    a.btn.btn-sm.btn-capsule.todo-btn(href='#')
-                        |确认完成
-            
+        ul.nav.nav-tabs.todo-tabs
+            li.active
+                a(href="#todo_1" role="tab" data-toggle="tab") 紧急事项
+            li
+                a(href='#todo_2' role="tab" data-toggle="tab") 新增事项
+            li
+                a(href='#todo_3' role="tab" data-toggle="tab") 进行中事项
+            li
+                a(href='#todo_4' role="tab" data-toggle="tab") 已完成事项
+            li
+                a(href='#todo_5' role="tab" data-toggle="tab") 空白列表示例
+        .tab-content
+            .tab-pane.active#todo_1( role="tabpanel")
+                ul.todo
+                    li.todo-alert
+                        .todo-icon
+                            i.fa.fa-exclamation
+                        .todo-title
+                            |紧急：培训审批
+                            .todo-time 09.07
+                        .todo-text 办公协同-人力资源-培训-总经理审批：2017年中团队执行力培训活动待审批
+                        .pull-right
+                            a.btn.btn-sm.btn-capsule.todo-btn(href='#')
+                                |立即执行&nbsp;
+                                i.fa.fa-angle-right
+                    li.todo-alert
+                        .todo-icon
+                            i.fa.fa-exclamation
+                        .todo-title
+                            |紧急：租赁合同审批
+                            .todo-time 09.07
+                        .todo-text 办公协同-人力资源-培训-总经理审批：2017年中团队执行力培训活动待审批
+                        .pull-right
+                            a.btn.btn-sm.btn-capsule.todo-btn(href='#')
+                                |立即执行&nbsp;
+                                i.fa.fa-angle-right
+                    li.todo-alert
+                        .todo-icon
+                            i.fa.fa-exclamation
+                        .todo-title
+                            |紧急：用印申请审批
+                            .todo-time 09.07
+                        .todo-text 办公协同-人力资源-培训-总经理审批：2017年中团队执行力培训活动待审批
+                        .pull-right
+                            a.btn.btn-sm.btn-capsule.todo-btn(href='#')
+                                |立即执行&nbsp;
+                                i.fa.fa-angle-right
+                    
+            .tab-pane#todo_2( role="tabpanel")
+                ul.todo
+                    li.todo-new
+                        .todo-icon
+                            i.fa.fa-plus
+                        .todo-title
+                            |新增：路演项目审核
+                            .todo-time 09.15
+                        .todo-text 创业孵化-创业路演-创业路演审核：帕克智能停车创业项目路演
+                        .pull-right
+                            a.btn.btn-sm.btn-capsule.todo-btn(href='#')
+                                |开始处理&nbsp;
+                                i.fa.fa-angle-right
+                    li.todo-new
+                        .todo-icon
+                            i.fa.fa-plus
+                        .todo-title
+                            |新增：路演项目审核
+                            .todo-time 09.07
+                        .todo-text 党政管理-工会活动-工会活动编辑：关于2017中秋节晚会筹办组委会成员名单及任务分配的通知
+                        .pull-right
+                            a.btn.btn-sm.btn-capsule.todo-btn(href='#')
+                                |开始处理&nbsp;
+                                i.fa.fa-angle-right
+                    li.todo-new
+                        .todo-icon
+                            i.fa.fa-plus
+                        .todo-title
+                            |新增：路演项目审核
+                            .todo-time 09.07
+                        .todo-text 物业管理-仓库-采购申请：单号：84001251，产品名称：45W节能灯，采购数量：200
+                        .pull-right
+                            a.btn.btn-sm.btn-capsule.todo-btn(href='#')
+                                |开始处理&nbsp;
+                                i.fa.fa-angle-right
+                    li.todo-new
+                        .todo-icon
+                            i.fa.fa-plus
+                        .todo-title
+                            |新增：路演项目审核
+                            .todo-time 09.15
+                        .todo-text 创业孵化-创业路演-创业路演审核：帕克智能停车创业项目路演
+                        .pull-right
+                            a.btn.btn-sm.btn-capsule.todo-btn(href='#')
+                                |开始处理&nbsp;
+                                i.fa.fa-angle-right
+            .tab-pane#todo_3( role="tabpanel")
+                ul.todo
+                    li.todo-current
+                        .todo-icon
+                            i.fa.fa-arrow-right
+                        .todo-title
+                            |进行中：工会活动编辑
+                            .todo-time 09.07
+                        .todo-text 党政管理-工会活动-工会活动编辑：关于2017中秋节晚会筹办组委会成员名单及任务分配的通知
+                        .pull-right
+                            a.btn.btn-sm.btn-capsule.todo-btn(href='#')
+                                |继续处理&nbsp;
+                                i.fa.fa-angle-right
+                    li.todo-current
+                        .todo-icon
+                            i.fa.fa-arrow-right
+                        .todo-title
+                            |进行中：路演项目审核
+                            .todo-time 09.15
+                        .todo-text 创业孵化-创业路演-创业路演审核：帕克智能停车创业项目路演
+                        .pull-right
+                            a.btn.btn-sm.btn-capsule.todo-btn(href='#')
+                                |继续处理&nbsp;
+                                i.fa.fa-angle-right
+                    li.todo-current
+                        .todo-icon
+                            i.fa.fa-arrow-right
+                        .todo-title
+                            |进行中：采购申请审批通过
+                            .todo-time 09.07
+                        .todo-text 物业管理-仓库-采购申请：单号：84001251，产品名称：45W节能灯，采购数量：200
+                        .pull-right
+                            a.btn.btn-sm.btn-capsule.todo-btn(href='#')
+                                |继续处理&nbsp;
+                                i.fa.fa-angle-right
+            .tab-pane#todo_4( role="tabpanel")
+                ul.todo
+                    li.todo-finished
+                        .todo-icon
+                            i.fa.fa-check
+                        .todo-title
+                            |已完成：路演项目审核
+                            .todo-time 09.15
+                        .todo-text 创业孵化-创业路演-创业路演审核：帕克智能停车创业项目路演
+                        .pull-right
+                            a.btn.btn-sm.btn-capsule.todo-btn(href='#')
+                                |确认完成
+                    li.todo-finished
+                        .todo-icon
+                            i.fa.fa-check
+                        .todo-title
+                            |已完成：工会活动编辑
+                            .todo-time 09.07
+                        .todo-text 党政管理-工会活动-工会活动编辑：关于2017中秋节晚会筹办组委会成员名单及任务分配的通知
+                        .pull-right
+                            a.btn.btn-sm.btn-capsule.todo-btn(href='#')
+                                |确认完成
+                    li.todo-finished
+                        .todo-icon
+                            i.fa.fa-check
+                        .todo-title
+                            |已完成：采购申请审批通过
+                            .todo-time 09.07
+                        .todo-text 物业管理-仓库-采购申请：单号：84001251，产品名称：45W节能灯，采购数量：200
+                        .pull-right
+                            a.btn.btn-sm.btn-capsule.todo-btn(href='#')
+                                |确认完成
+                    li.todo-finished
+                        .todo-icon
+                            i.fa.fa-check
+                        .todo-title
+                            |已完成：路演项目审核
+                            .todo-time 09.15
+                        .todo-text 创业孵化-创业路演-创业路演审核：帕克智能停车创业项目路演
+                        .pull-right
+                            a.btn.btn-sm.btn-capsule.todo-btn(href='#')
+                                |确认完成
+                    li.todo-finished
+                        .todo-icon
+                            i.fa.fa-check
+                        .todo-title
+                            |已完成：工会活动编辑
+                            .todo-time 09.07
+                        .todo-text 党政管理-工会活动-工会活动编辑：关于2017中秋节晚会筹办组委会成员名单及任务分配的通知
+                        .pull-right
+                            a.btn.btn-sm.btn-capsule.todo-btn(href='#')
+                                |确认完成
+                    li.todo-finished
+                        .todo-icon
+                            i.fa.fa-check
+                        .todo-title
+                            |已完成：采购申请审批通过
+                            .todo-time 09.07
+                        .todo-text 物业管理-仓库-采购申请：单号：84001251，产品名称：45W节能灯，采购数量：200
+                        .pull-right
+                            a.btn.btn-sm.btn-capsule.todo-btn(href='#')
+                                |确认完成
+            .tab-pane#todo_5( role="tabpanel")
+                .todo-empty 
+                    i.fa.fa-inbox
+                    br
+                    |您的（紧急/新增/进行中/已完成）事项为空
