--- a/src/apps/1688Admin/webapp/merchant.pug
+++ b/src/apps/1688Admin/webapp/merchant.pug
@@ -1,14 +1,526 @@
 extends layout
 
-
+block css
+    link(rel='stylesheet', href=CSS_DIR + 'font-awesome.min.css')
+    link(rel='stylesheet', href=CSS_DIR + 'bootstrap-table.min.css')
+    link(rel='stylesheet', href=CSS_DIR + 'index.css')
 
 block content
     .container-fluid.row-space-common
-        .row
-            .col-xs-12
-                h2 招商管理首页
-                    
+        .row.top-row
+            .col-sm-12.col-md-5
+                .block-title.no-bottom.type2
+                    .block-title-head 
+                        |招商总览
+                        .block-title-head-deco
+                include ../components/merchant-overview/index
+                
+                .block-title.no-bottom.type2.mt-space
+                    .block-title-head 
+                        |行业分析
+                        .block-title-head-deco
+                .abs-container.abs-hp-1of2
+                    .abs-content
+                        .bg-gray-f5#chart01(style="width:100%;height:100%")
+                
+                .block-title.no-bottom.type2.mt-space
+                    .block-title-head 
+                        |客户来源分析
+                        .block-title-head-deco
+                .abs-container.abs-hp-1of2
+                    .abs-content
+                        .bg-gray-f5#chart02(style="width:100%;height:100%")
+                        
+            .col-sm-12.col-md-7
+                .block-title.no-bottom
+                    .block-title-head 
+                        |招商动态
+                        .block-title-head-deco
+                .block-table-container.text-sm
+                    table#merchant_table
+                
+                .block-title.no-bottom.mt-space
+                    .block-title-head 
+                        |近三年签约情况
+                        .block-title-head-deco
+                .block-table-container.text-sm
+                    table#sign_table
+                
+                .block-title.no-bottom.mt-space
+                    .block-title-head 
+                        |近两年意向项目情况
+                        .block-title-head-deco
+                .block-table-container.text-sm
+                    table#intent_table
+
+    include ../components/footer/index
+
+block js
+    script(src=JS_DIR + 'jquery.min.js')
+    script(src=JS_DIR + 'bootstrap.min.js')
+    script(src=JS_DIR + 'bootstrap-table/bootstrap-table.min.js')
+    script(src=JS_DIR + 'bootstrap-table/bootstrap-table-zh-CN.min.js')
+    script(src=JS_DIR + 'highcharts.js')
+    script(src=JS_DIR + 'highcharts-zh_CN.js')
+    script(src=JS_DIR + 'app.js')
+    script(type='text/javascript').
+        $(document).ready(function(){
             
-
-
+            function celllStyleNowrap(value, row, index) {
+                return {
+                    css : {
+                        "white-space" : "nowrap"
+                    }
+                }
+            }
+            
+            function celllStyleRelative(value, row, index) {
+                return {
+                    css : {
+                        "position" : "relative"
+                    }
+                }
+            }
+            
+            $('#merchant_table').bootstrapTable({
+                search : true,
+                pagination : true,
+                showPaginationSwitch : false,
+                clickToSelect : false,
+                columns: [
+                    {
+                        field: 'id',
+                        title: '序号',
+                        sortable: true,
+                        halign: 'center',
+                        align: 'right',
+                        width: 30
+                    }, 
+                    {
+                        field: 'customer',
+                        title: '客户名称',
+                        halign: 'center',
+                        cellStyle: celllStyleNowrap
+                    },
+                    {
+                        field: 'state',
+                        title: '状态',
+                        sortable: true,
+                        halign: 'center'
+                    }, 
+                    {
+                        field: 'name',
+                        title: '项目负责人',
+                        halign: 'center'
+                    }, 
+                    {
+                        field: 'date',
+                        title: '更新时间',
+                        halign: 'center',
+                        sortable: true
+                    }
+                ],
+                data: [
+                    {
+                        id: 1,
+                        customer: '客户名称1',
+                        state: '项目咨询',
+                        name: '周吴郑',
+                        date: '2017.06.23'
+                    }, 
+                    {
+                        id: 2,
+                        customer: '客户名称2',
+                        state: '意向洽谈',
+                        name: '任水寒',
+                        date: '2017.07.11'
+                    }, 
+                    {
+                        id: 3,
+                        customer: '客户名称3',
+                        state: '合同签订',
+                        name: '苏普',
+                        date: '2017.07.11'
+                    }, 
+                    {
+                        id: 4,
+                        customer: '客户名称4',
+                        state: '客户终止',
+                        name: '李晟闻',
+                        date: '2017.07.11'
+                    }, 
+                    {
+                        id: 5,
+                        customer: '客户名称5',
+                        state: '项目咨询',
+                        name: '岳叔华',
+                        date: '2017.07.11'
+                    }, 
+                    {
+                        id: 6,
+                        customer: '客户名称6',
+                        state: '意向洽谈',
+                        name: '侯善稚',
+                        date: '2017.07.11'
+                    }, 
+                    {
+                        id: 7,
+                        customer: '客户名称7',
+                        state: '合同签订',
+                        name: '何望',
+                        date: '2017.07.11'
+                    }, 
+                    {
+                        id: 8,
+                        customer: '客户名称8',
+                        state: '客户终止',
+                        name: '陈韵瑄',
+                        date: '2017.07.11'
+                    }, 
+                    {
+                        id: 9,
+                        customer: '客户名称9',
+                        state: '合同签订',
+                        name: '郭武莱',
+                        date: '2017.07.11'
+                    }, 
+                    {
+                        id: 10,
+                        customer: '客户名称10',
+                        state: '项目咨询',
+                        name: '刘飞',
+                        date: '2017.07.11'
+                    }, 
+                    {
+                        id: 11,
+                        customer: '客户名称11',
+                        state: '意向洽谈',
+                        name: '王山崎',
+                        date: '2017.07.11'
+                    }, 
+                    {
+                        id: 12,
+                        customer: '客户名称12',
+                        state: '客户终止',
+                        name: '王璐',
+                        date: '2017.07.11'
+                    }, 
+                    {
+                        id: 13,
+                        customer: '客户名称13',
+                        state: '项目咨询',
+                        name: '刘来有',
+                        date: '2017.07.11'
+                    }, 
+                    {
+                        id: 14,
+                        customer: '客户名称14',
+                        state: '合同签订',
+                        name: '王越建',
+                        date: '2017.07.11'
+                    }, 
+                    {
+                        id: 15,
+                        customer: '客户名称15',
+                        state: '意向洽谈',
+                        name: '尚文清',
+                        date: '2017.07.11'
+                    }
+                ]
+            });
+            
+            //格式化同比数据，设置箭头图标和颜色
+            function compareFormatter(value, row, index) {
+                var valueArray = value.split('_');
+                var trueValue = valueArray[0];
+                var arrowDirection = valueArray[1];
+                var arrowIcon = 'arrow-up font-red-intense';
+                if(arrowDirection == 'down') {
+                    arrowIcon = 'arrow-down font-green-grass';
+                } else if(arrowDirection == 'unchanged') {
+                    arrowIcon = 'stop-circle font-gray-d6';
+                }
+                return trueValue + "&nbsp;<i class='fa fa-" + arrowIcon + "'></i>";
+            }
+            
+            $('#sign_table').bootstrapTable({
+                pagination : false,
+                showPaginationSwitch : false,
+                clickToSelect : false,
+                columns: [
+                    {
+                        field: 'year',
+                        title: '年份',
+                        sortable: true,
+                        halign: 'center',
+                        align: 'right'
+                    }, 
+                    {
+                        field: 'type_1',
+                        title: '软件开发',
+                        halign: 'center',
+                        align: 'right'
+                    },
+                    {
+                        field: 'type_2',
+                        title: '制造业',
+                        halign: 'center',
+                        align: 'right'
+                    },
+                    {
+                        field: 'type_3',
+                        title: '智能家电',
+                        halign: 'center',
+                        align: 'right'
+                    }, 
+                    {
+                        field: 'type_4',
+                        title: '电子通讯',
+                        halign: 'center',
+                        align: 'right'
+                    }, 
+                    {
+                        field: 'type_5',
+                        title: '电子信息',
+                        halign: 'center',
+                        align: 'right'
+                    },
+                    {
+                        field: 'type_6',
+                        title: '金融业',
+                        halign: 'center',
+                        align: 'right'
+                    }, 
+                    {
+                        field: 'total',
+                        title: '当年总计',
+                        halign: 'center',
+                        align: 'right'
+                    },  
+                    {
+                        field: 'compare',
+                        title: '同比',
+                        halign: 'center',
+                        align: 'right',
+                        formatter: compareFormatter,
+                        cellStyle: celllStyleNowrap
+                    }
+                ],
+                data: [
+                    {
+                        year: 2015,
+                        type_1: '0',
+                        type_2: '0',
+                        type_3: '0',
+                        type_4: '0',
+                        type_5: '0',
+                        type_6: '0',
+                        total: '0',
+                        compare: '0.00%_down'
+                    }, 
+                    {
+                        year: 2016,
+                        type_1: '0',
+                        type_2: '0',
+                        type_3: '0',
+                        type_4: '0',
+                        type_5: '0',
+                        type_6: '0',
+                        total: '0',
+                        compare: '0.00%_unchanged'
+                    },
+                    {
+                        year: 2017,
+                        type_1: '7',
+                        type_2: '5',
+                        type_3: '0',
+                        type_4: '0',
+                        type_5: '0',
+                        type_6: '3',
+                        total: '15',
+                        compare: '100.00%_up'
+                    },
+                ]
+            });
+            
+            //格式化意向漏斗图列，实现漏斗图图形
+            function intentFormatter(value, row, index) {
+                
+                var funnelHtml = '';
+                if(value == '项目咨询') {
+                    funnelHtml = '<div class="funnel"><img src="../images/funnel_1.png"></div>';
+                } else if(value == '意向洽谈') {
+                    funnelHtml = '<div class="funnel"><img src="../images/funnel_2.png"></div>';
+                } else if(value == '合同签订') {
+                    funnelHtml = '<div class="funnel"><img src="../images/funnel_3.png"></div>';
+                } else if(value == '客户终止') {
+                    funnelHtml = '<div class="funnel"><img src="../images/funnel_4.png"></div>';
+                }
+                
+                return '<p style="position:relative; z-index:2; margin:0;">' + value + '</p>' + funnelHtml;
+            }
+            
+            $('#intent_table').bootstrapTable({
+                pagination : false,
+                showPaginationSwitch : false,
+                clickToSelect : false,
+                columns: [
+                    {
+                        field: 'intent',
+                        title: '意向漏斗图',
+                        halign: 'center',
+                        align: 'center',
+                        formatter: intentFormatter,
+                        cellStyle: celllStyleRelative
+                    }, 
+                    {
+                        field: 'lastyear',
+                        title: '上年度',
+                        halign: 'center',
+                        align: 'right'
+                    },
+                    {
+                        field: 'thisyear',
+                        title: '本年度',
+                        halign: 'center',
+                        align: 'right'
+                    }, 
+                    {
+                        field: 'compare',
+                        title: '同比',
+                        halign: 'center',
+                        align: 'right',
+                        formatter: compareFormatter,
+                        cellStyle: celllStyleNowrap
+                    }
+                ],
+                data: [
+                    {
+                        intent: '项目咨询',
+                        lastyear: '0',
+                        thisyear: '8',
+                        compare: '100.00%_up'
+                    }, 
+                    {
+                        intent: '意向洽谈',
+                        lastyear: '0',
+                        thisyear: '7',
+                        compare: '100.00%_up'
+                    },
+                    {
+                        intent: '合同签订',
+                        lastyear: '0',
+                        thisyear: '5',
+                        compare: '100.00%_up'
+                    },
+                    {
+                        intent: '客户终止',
+                        lastyear: '0',
+                        thisyear: '1',
+                        compare: '100.00%_up'
+                    },
+                ]
+            });
+            
+            $('#chart01').highcharts({
+                chart: {
+                    plotBackgroundColor: null,
+                    plotBorderWidth: null,
+                    plotShadow: false,
+                    backgroundColor: '#F5F5F5'
+                },
+                title: false,
+                tooltip: {
+                    headerFormat: '{series.name}<br>',
+                    pointFormat: '{point.name}: <b>{point.percentage:.1f}%</b>'
+                },
+                credits: {
+                    enabled: false
+                },
+                plotOptions: {
+                    pie: {
+                        allowPointSelect: true,
+                        cursor: 'pointer',
+                        dataLabels: {
+                            enabled: true,
+                            format: '<b>{point.name}</b>: {point.percentage:.1f} %',
+                            style: {
+                                color: (Highcharts.theme && Highcharts.theme.contrastTextColor) || 'black'
+                            }
+                        }
+                    }
+                },
+                series: [{
+                    type: 'pie',
+                    innerSize : '75%',
+                    name: '企业行业占比',
+                    data: [
+                        ['计算机', 25.0],
+                        ['工业',26.8],
+                        ['农业',22.8],
+                        ['金融',18.5],
+                        ['科研',4.2],
+                        ['其他',2.7]
+                    ]
+                }]
+            });
+            
+            $('#chart02').highcharts({
+                chart: {
+                    backgroundColor: '#F5F5F5',
+                    type: 'column'
+                },
+                title: false,
+                credits: {
+                    enabled: false
+                },
+                xAxis: {
+                    categories: [
+                        '自主开发',
+                        '企业介绍',
+                        '主动上门',
+                        '招商会',
+                        '其他'
+                    ],
+                    crosshair: true
+                },
+                yAxis: {
+                    min: 0,
+                    title: false
+                },
+                tooltip: {
+                    headerFormat: '<span style="font-size:10px">{point.key}</span><table>',
+                    pointFormat: '<tr><td style="color:{series.color};padding:0">{series.name}: </td>' +
+                    '<td style="padding:0"><b>{point.y:1f} 个</b></td></tr>',
+                    footerFormat: '</table>',
+                    shared: true,
+                    useHTML: true
+                },
+                plotOptions: {
+                    column: {
+                        pointPadding: 0.2,
+                        borderWidth: 0
+                    }
+                },
+                series: [{
+                    name: '前期洽谈',
+                    data: [0,0,0,1,0]
+                }, {
+                    name: '项目建议书/项目申请报告',
+                    data: [1,0,0,0,0]
+                }, {
+                    name: '项目立项',
+                    data: [1,0,0,1,0]
+                }, {
+                    name: '项目选址',
+                    data: [0,0,1,0,0]
+                }, {
+                    name: '签订合同',
+                    data: [2,0,1,0,0]
+                }]
+            });
+            
+            
+            
+        });
 
